--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,16 +23,12 @@
               %a(title="Send me an email" href = "/contact")
                 Contact
             
-      #main=yield
+      #main(class="clearfix")=yield
       
       #side
-        %h2 About Me
         =haml :about, :layout => false
-        %h2 Links
         =haml :links, :layout => false
         -# figure this out later
-          %h2 Previous Posts
           =haml :previous_posts, :layout => false
-          %h2 Archives
           =haml :archives, :layout => false
     #foot
