it "works". It's not pretty (at ALL), but it works.
At least partially. Only the home page will render correctly. The next step is to get the others rendering correctly, as well, with as little code as possible. The about page is still really long; it's going to be chopped now.

--- a/views/about.haml
+++ b/views/about.haml
@@ -13,5 +13,4 @@
     %span.smLink
       Twitter
       /%img{ :id => "sm_icon_twitter", :src => "images/sm_icon_twitter.png", :class => "smIcon", :alt => "#{full_name}'s Twitter")
-
-%img{ :id => "me.png", :class => "aboutPic floatRight", :src => "images/me.png", alt => "Me (#{@full_name})" }
+/%img{ :id => "me.png", :class => "aboutPic floatRight", :src => "images/me.png", alt => "Me (#{@full_name})" }
