--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %meta(http-equiv="content-type" content="text/html;charset=UTF-8")
     %title Blog Awesome
-    %link(rel="stylesheet" type="text/css" href="/styles")
+    %link(rel="stylesheet" type="text/css" href="/styles.css")
     /This ensures the sticky footer works in IE8
     /[if IE 8]
       %style(type="text/css") #wrap {display:table;}
@@ -36,3 +36,4 @@
             =haml :previous_posts, :layout => false
             =haml :archives, :layout => false
     #footer
+      %p Thanks for reading!
