--- a/views/contact.haml
+++ b/views/contact.haml
@@ -1,8 +1,10 @@
 %h2 Contact Me
-%form{ :name => "contact_me", :id => "contact_me", :action => "/contact" :method => "post" }
+%form{ :name => "contact_me", :id => "contact_me", :action => "/contact", :method => "post" }
   %label{ :for => "name" } Your name
   %input{ :name => "name", :id => "name", :type => "text" }
+  %br
   %label{ :for => "email" } Your email address
   %input{ :name => "email", :id => "email", :type => "text" }
+  %br
   %label{ :for => "message" } Your message to me
   %textarea{ :name => "message", :id => "message" }
