--- a/views/layout.haml
+++ b/views/layout.haml
@@ -18,7 +18,7 @@
           %ul
             %li 
               %a(title="Wonderings and Wanderings" href="/")
-                Blog
+                Thoughts
             %li 
               %a(title="Meet your host!" href = "/about") 
                 About
@@ -30,10 +30,8 @@
         #content
           =yield
         #side
-          =haml :about, :layout => false
           =haml :links, :layout => false
           -# figure this out later
             =haml :previous_posts, :layout => false
             =haml :archives, :layout => false
     #footer
-      %p Thanks for reading!
