Everything works and typing in URLs that aren't actual pages gives an error.
Starting attempting to implement active tabs for the current page, still playing with that.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,8 +16,8 @@
           %h1 Blog Awesome
         #nav
           %ul
-            %li 
-              %a(title="Wonderings and Wanderings" href="/")
+            %li
+              %a(:title => "Wonderings and Wanderings", :href => "/")
                 Thoughts
             %li 
               %a(title="Meet your host!" href = "/about") 
