--- a/views/about.haml
+++ b/views/about.haml
@@ -13,4 +13,5 @@
     %span.smLink
       Twitter
       /%img{ :id => "sm_icon_twitter", :src => "images/sm_icon_twitter.png", :class => "smIcon", :alt => "#{full_name}'s Twitter")
-/%img{ :id => "me.png", :class => "aboutPic floatRight", :src => "images/me.png", alt => "Me (#{@full_name})" }
+      
+%img{ :id => 'me.png', :class => 'aboutPic floatRight', :src => 'images/me.png', :alt => "Me (#{@full_name})" }
