--- a/views/styles.sass
+++ b/views/styles.sass
@@ -100,12 +100,11 @@ div
   margin: 5px 5px 0px
   padding: 20px 20px 0.25em
   text-transform: uppercase
-  
-h1
-  display: block
-  font-size: 2em
-  font-weight: bold
-  margin: 0.67em 0px
+  h1
+    display: block
+    font-size: 2em
+    font-weight: bold
+    margin: 0.67em 0px
   
 p
   display: block
@@ -147,6 +146,16 @@ h2
   +sans-heading-font
   letter-spacing: 0.2em
   margin: 1.5em 0px 0.75em
+h1
+  display: block
+  +sans-heading-font
+  font-size: 1.5em
+  color: #777
+  margin: 0.67em 0px
+  
+a
+  text-decoration: none
+  color = #58A
   
 .post-title
   color: #c60
@@ -262,9 +271,6 @@ dt
 
 /*
   typography
-  a
-    text-decoration: none
-    color = #58A
     
   h2
     padding: 0 0 10px 0
@@ -285,5 +291,7 @@ input[type="text"], textarea
   font-size: 18px
   padding: 7px
   display: block
+  font: large Georgia, serif
+  margin: 2px 0 37px
 textarea
   height: 150px
