--- a/views/styles.sass
+++ b/views/styles.sass
@@ -1,23 +1,9 @@
 // modeling this after lisli.net
 
 //variables
-!grey = #555
-
 !tab_radius = 5px
 
-!simple_border = 1px "solid" !grey
-
 //mixins
-=simple_border
-  border: !simple_border
-
-=fancy_fonts
-  font:
-    family: Georgia, Serif
-    weight: normal
-    style: normal
-  color = !grey
-
 =sans-heading-font  
   font: normal normal normal 78%/1.4em 'Trebuchet MS', Trebuchet, Arial, Verdana, sans-serif
   text-transform: uppercase
@@ -86,6 +72,15 @@ iframe
   margin: 0px auto
   width: 660px
   
+h2
+  color: #999
+  +sans-heading-font
+  letter-spacing: 0.2em
+  margin: 1.5em 0px 0.75em
+a
+  text-decoration: none
+  color = #58A
+  
 div
   display: block
   
@@ -128,6 +123,13 @@ p
   width: 660px
   h2
     display: none
+  h1
+    display: block
+    +sans-heading-font
+    font-size: 1.5em
+    color: #666
+    margin: 0.67em 0px
+
   
 #main
   float: left
@@ -140,22 +142,6 @@ p
   img
     border: 1px solid #ddd
     padding: 4px
-  
-h2
-  color: #999
-  +sans-heading-font
-  letter-spacing: 0.2em
-  margin: 1.5em 0px 0.75em
-h1
-  display: block
-  +sans-heading-font
-  font-size: 1.5em
-  color: #777
-  margin: 0.67em 0px
-  
-a
-  text-decoration: none
-  color = #58A
   
 .post-title
   color: #c60
@@ -282,12 +268,12 @@ dt
 /*
   inputs
 label
-  background = !grey
+  background: #666
   color: #fff
   padding: 3px
 input[type="text"], textarea
   width: 300px
-  border = 3px "solid" !grey
+  border: 3px solid #666
   font-size: 18px
   padding: 7px
   display: block
