Things are looking quite tidy! No mail yet, though. Pony won't install. And still haven't started loading in the blogger stuff. But the path is clear!

--- a/views/language_assistance.haml
+++ b/views/language_assistance.haml
@@ -3,8 +3,8 @@
   .post-body
     %div
       %div(style="clear:both;")
-      %a(href="http://www.lisli.net/uploaded_images/books-737655.JPG")
-        %img(style="cursor: pointer; width: 400px; height: 327px;" src="http://www.lisli.net/uploaded_images/books-737374.JPG" alt="Tools (books) of the trade")
+      %a(href="/images/books-737655.JPG")
+        %img(style="cursor: pointer; width: 400px; height: 327px;" src="/images/books-737655.JPG" alt="Tools (books) of the trade")
       %br
       %br
       %p
