--- a/views/links.haml
+++ b/views/links.haml
@@ -1,8 +1,11 @@
 %h2 Links
 %ul.links
   %li
-    %a{ :href => "http://www.jiggzy.com", :title => "Nick Cherry is an excellent person" }
-      My original mentor
+    %a{ :href => "http://www.myspace.com/theroaringkittens", :title => "I am a kitten. Roar!" }
+      Hear me roar
   %li
-    %a{ :href => "http://www.problemchildmag.com", :title => "I'll be reworking it quite soon. As soon as the new MacBook Pros come out..." }
-      A sweet literary magazine
+    %a{ :href => "http://www.twitter.com/lisa_alane", :title => "\"Tweet tweet!\" says the bird" }
+      Hear me chirp
+  %li
+    %a{ :href => "http://www.google.com/reader/shared/07996371268026532679", :title => "I like newspapers, but Greader's nice, too" }
+      Read like me
