Discovered other things that need to be done (see TODO). Using Markdown instead of Textile, to no avail.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,7 +15,7 @@
           %a{ :href => "/thoughts", :class => current_tab_if('/thoughts') }
             Thoughts
         %li 
-          %a{ :href => "/", :class => current_tab_if('/') }
+          %a{ :href => "/", :class => current_tab_if(['/', '/language_assistance']) }
             Language Assistance
         %li
           %a{ :href => "/contact", :class => current_tab_if('/contact')}
