Mail still doesn't work, but the feed is starting to come together.

--- a/views/thoughts.haml
+++ b/views/thoughts.haml
@@ -5,3 +5,7 @@
   Doesn't seem very complicated, I agree. But! I need scripts on _this_ page that the other pages on the site don't have. These need to go in the &lt;head&gt;. But I insist that I shall only have one layout. And I don't want to clutter it up with logic.
     
   At this point I'm thinking the best way to do this would be with helper functions? I'll create separate branches for each approach.
+  
+%hr
+
+%p Test to check if the feed was gotten properly: #{@feed['feed']['title']}
