I am apparently not gitting properly. All kinds of wonky events. Also, double quotes on the blogger url didn't work, but single quotes seem fine. Also: prettier contact form here.

--- a/views/styles.sass
+++ b/views/styles.sass
@@ -274,7 +274,9 @@ dt
 label
   background: #666
   color: #fff
-  padding: 3px
+  padding: 3px 6px
+  -webkit-box-shadow: 0 0 3px #999
+  -moz-box-shadow: 0 0 3px #999
 input[type="text"], textarea
   width: 95%
   border: 3px solid #666
@@ -283,6 +285,8 @@ input[type="text"], textarea
   display: block
   font: large Georgia, serif
   margin: 2px 0 37px
+  -webkit-box-shadow: 0 0 3px #999
+  -moz-box-shadow: 0 0 3px #999
 textarea
   height: 150px
   
@@ -293,14 +297,14 @@ input[type="submit"]
   color: #fff
   cursor: pointer
   text-shadow: 0 1px 1px #000
-  -webkit-box-shadow: 0 1px 3px #999
-  -moz-box-shadow: 0 1px 3px #999
+  -webkit-box-shadow: 0 1px 4px #999
+  -moz-box-shadow: 0 1px 4px #999
   font: normal 16px Georgia, serif
   text-decoration: none
   letter-spacing: 1px
   &:hover
-    -webkit-box-shadow: 0 0 7px #999
-    -moz-box-shadow: 0 0 7px #999
+    -webkit-box-shadow: 0 0 8px #999
+    -moz-box-shadow: 0 0 8px #999
   &:active
     -webkit-box-shadow: -1px -1px 1px #999
     -moz-box-shadow: -1px -1px 1px #999
