Correctly displaying one blog post from Blogger on the :thoughts page.
Next: get all of them loaded in, and put this on Heroku.

--- a/views/styles.sass
+++ b/views/styles.sass
@@ -128,6 +128,20 @@ p
   width: 660px
   h2
     display: none
+  h2.date-header
+    display: block
+    color: #999
+    font: normal 78%/1.4em 'Trebuchet MS', Trebuchet, Arial, Verdana, sans-serif
+    letter-spacing: 0.2em
+    text-transform: uppercase
+  h3.post-title
+    display: block
+    color:#c60
+    font-size: 140%
+    font-weight: normal
+    line-height: 1.4em
+    margin: 0.25em 0 0
+    padding: 0 0 4px
   h1
     display: block
     +sans-heading-font
@@ -147,6 +161,8 @@ p
   img
     border: 1px solid #ddd
     padding: 4px
+  div.blogger-post-footer
+    display: none
   
 .post-title
   color: #c60
