--- a/views/thoughts.haml
+++ b/views/thoughts.haml
@@ -1,11 +1,8 @@
-%h2 Thoughts
-:markdown
-  So I want to [embed a wave](http://code.google.com/apis/wave/embed/guide.html) in this here page.
-    
-  Doesn't seem very complicated, I agree. But! I need scripts on _this_ page that the other pages on the site don't have. These need to go in the &lt;head&gt;. But I insist that I shall only have one layout. And I don't want to clutter it up with logic.
-    
-  At this point I'm thinking the best way to do this would be with helper functions? I'll create separate branches for each approach.
-  
-%hr
-
-%p Test to check if the feed was gotten properly: #{@feed['feed']['title']}
+-t = time_from_iso_format_str(@posts[1]['published'])
+%h2.date-header= t.strftime('%A, %B %d, %Y')
+.post
+  %h3.post-title= @posts[1].title
+  .post-body
+    %div
+      %div(style="clear:both;")
+      %p= @posts[1].content
