The plumbing is hooked up! There are a many tweaks I can think of to tackle next:
Add posted time at bottom of each post
Add link to actual blog in side bar
Show labels
Show number of comments (slide-toggle them when clicked)
Add favicon
Add pagination (without and then with ajax calls)

But let's not get ahead of ourselves--that contact form still isn't functional.

--- a/views/thoughts.haml
+++ b/views/thoughts.haml
@@ -1,8 +1,1 @@
--t = time_from_iso_format_str(@posts[1]['published'])
-%h2.date-header= t.strftime('%A, %B %d, %Y')
-.post
-  %h3.post-title= @posts[1].title
-  .post-body
-    %div
-      %div(style="clear:both;")
-      %p= @posts[1].content
+= partial(:post, :collection => @posts)
