Favicon is in place; mail doesn't work but probably due to my configuration. Hopefully it will work on Heroku.
Not that this is an excuse, but I'm rather bored of fighting with this. Also! A flash has been added. If the mail works, it won't even tell lies.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,7 @@
     %meta(http-equiv="content-type" content="text/html;charset=UTF-8")
     %title Lisli
     %link(rel="stylesheet" type="text/css" href="/styles.css")
+    %link(rel="shortcut icon" href="images/favicon.ico")
   %body
     #header
       %h1#blog-title Lisli
@@ -23,6 +24,8 @@
     #content
       #main
         #main2
+          -if flash[:notice]
+            #notice= flash[:notice]
           =yield
       #sidebar
         #sidebar2
