--- a/views/styles.sass
+++ b/views/styles.sass
@@ -1,5 +1,3 @@
-// modeling this after lisli.net
-
 //variables
 !tab_radius = 5px
 
@@ -136,7 +134,7 @@ p
     text-transform: uppercase
   h3.post-title
     display: block
-    color:#c60
+    color: #c60
     font-size: 140%
     font-weight: normal
     line-height: 1.4em
@@ -291,8 +289,6 @@ label
   background: #666
   color: #fff
   padding: 3px 6px
-  -webkit-box-shadow: 0 0 3px #999
-  -moz-box-shadow: 0 0 3px #999
 input[type="text"], textarea
   width: 95%
   border: 3px solid #666
@@ -301,8 +297,6 @@ input[type="text"], textarea
   display: block
   font: large Georgia, serif
   margin: 2px 0 37px
-  -webkit-box-shadow: 0 0 3px #999
-  -moz-box-shadow: 0 0 3px #999
 textarea
   height: 150px
   
@@ -324,3 +318,17 @@ input[type="submit"]
   &:active
     -webkit-box-shadow: -1px -1px 1px #999
     -moz-box-shadow: -1px -1px 1px #999
+
+input[type="text"], textarea, #notice, label
+  -webkit-box-shadow: 0 0 3px #999
+  -moz-box-shadow: 0 0 3px #999
+
+#notice
+  background: #ffe099
+  border: 2px solid #c60
+  margin: 0 0 20px
+  padding: 10px
+  text-align: center
+
+::selection
+  background: #ffe099
