Maybe the mail actually works! That'd be super sweet.

--- a/views/language_assistance.haml
+++ b/views/language_assistance.haml
@@ -7,7 +7,7 @@
         %img(style="cursor: pointer; width: 400px; height: 327px;" src="/images/books-737655.png" alt="Tools (books) of the trade")
       %br
       %br
-      :markdown
+      :textile
         What is language assistance? Do you have trouble remembering when to use an apostrophe? Know the difference between an n-dash and m-dash? What about the difference between a colon and a semicolon? How are your spelling and consistency? Do you really have time to learn how to be a meticulous grammar snob? Probably not. That’s where language assistance comes in.
         
         With degrees in English and Spanish, an eye for detail, and a variety of writing, copy editing, proofreading, and translation (English-Spanish) experience, I would love to assist you in tailoring your language (on fliers, brochures, Web sites, newsletters, and the like) into tight, professionally written copy. Fret no longer about misplaced punctuation, misspellings, and poor word choice, because you have found someone to help!
