--- a/views/styles.sass
+++ b/views/styles.sass
@@ -13,7 +13,7 @@
   -webkit-border-bottom-left-radius= !tab_radius
   border-bottom-right-radius= !tab_radius
   border-bottom-left-radius= !tab_radius
-  border= 1px solid #ccc
+  border: 1px solid #ccc
   border-top: 0
   &:active
     border: 0
