Using rdiscount instead of bluecloth; added custom sidebar sections for Thoughts tab; made another fruitless stab at getting mail to work (will Pony 1.0 save the day? Here's hoping).

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -31,10 +31,12 @@
         #sidebar2
           #profile-container
             =haml :about_blurb, :layout => false
+          =yield_content :from_blogger
           =haml :links, :layout => false
           =haml :printed_word, :layout => false
           -# figure this out later
             =haml :previous_posts, :layout => false
             =haml :archives, :layout => false
+          =yield_content :subscribe
   #footer
     %p
