Updated README to be rdoc format as well as other minor tweaks

--- a/views/blogger_shoutout.haml
+++ b/views/blogger_shoutout.haml
@@ -2,4 +2,4 @@
   Visit on blogger
 %ul
   :markdown
-    [Visit Lisa on Blogger](http://lisayoder.blogspot.com) to leave comments and to enjoy other Blogger perks.
+    [Visit Lisa on Blogger](http://lisayoder.blogspot.com) to leave comments and view the archive.
