--- a/views/styles.sass
+++ b/views/styles.sass
@@ -126,7 +126,7 @@ p
   width: 660px
   h2
     display: none
-  h2.date-header
+  h2.date-header, p.post-footer > em
     display: block
     color: #999
     font: normal 78%/1.4em 'Trebuchet MS', Trebuchet, Arial, Verdana, sans-serif
@@ -154,7 +154,7 @@ p
 
 .post
   border-bottom: 1px dotted #aaa
-  margin: 0.5em 0 1.5em
+  margin: 0.5em 0
   padding-bottom: 1.5em
   img
     border: 1px solid #ddd
