--- a/views/styles.sass
+++ b/views/styles.sass
@@ -154,13 +154,23 @@ p
 
 .post
   border-bottom: 1px dotted #aaa
-  margin: 0.5em 0
-  padding-bottom: 1.5em
+  margin: 0.5em 0 1.5em
+  padding-bottom: 0.5em
   img
     border: 1px solid #ddd
     padding: 4px
   div.blogger-post-footer
     display: none
+  div
+    line-height: 1.6em
+    margin: 0 0 0.75em
+  ul
+    -webkit-padding-start: 40px
+    display: block
+    list-style-type: disc
+    margin: 1em 0
+  li
+    display: list-item
   
 .post-title
   color: #c60
