--- a/views/contact.haml
+++ b/views/contact.haml
@@ -1,9 +1,19 @@
+- content_for :validation do
+  %script(type="text/javascript" src="javascripts/jquery-1.4.2.min.js")
+  %script(type="text/javascript" src="javascripts/jquery.validate.min.js")
+  %script(type="text/javascript" src="javascripts/validation.js")
 %h2 Contact Me
 %form{ :name => "contact_me", :id => "contact_me", :action => "/contact", :method => "post" }
   %label{ :for => "name" } Your name
   %input{ :name => "name", :id => "name", :type => "text" }
+  %br
+  %br
   %label{ :for => "email" } Your email address
-  %input{ :name => "email", :id => "email", :type => "text" }
+  %input.required.email{ :name => "email", :id => "email", :type => "text" }
+  %br
+  %br
   %label{ :for => "message" } Your message to me
-  %textarea{ :name => "message", :id => "message" }
+  %textarea.required{ :name => "message", :id => "message", :minlength => "10" }
+  %br
+  %br
   %input{ :type => "submit", :value => "Send" }
